--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -5,3 +5,8 @@
     background-color: #ffffff;
     height: 100vh;
 }
+@media (max-width: 767px) {                  
+    .sidebar {
+       display: none;
+    }
+ }
